relacion user collection. Refactorizar headers y filters. cambio datatable
