# app/Http/Controllers/Api/CollectionController.php
@@ -47,5 +47,77 @@ class CollectionController extends Controller
 
         return response()->json(['collections' => $collections], 200);
     }
+    
+    /**
+     * @OA\Get(
+     *     path="/api/subscribedCollections",
+     *     summary="Obtener todas las colecciones del usuario",
+     *     description="Retorna una lista de todas las colecciones a las que el usuario se ha suscrito.",
+     *     tags={"Colecciones"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Listado de colecciones obtenido con éxito",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="collections",
+     *                 type="array",
+     *                 @OA\Items(ref="#/components/schemas/Coleccion")
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Error interno del servidor"
+     *     )
+     * )
+     */
+    public function getSubscribedCollections(Request $request): \Illuminate\Http\JsonResponse {
+        $user = $request->user();
+        $collections = $user->collections;
+        
+        
+        return response()->json(['collections' => $collections], 200);
+    }
+    
+    /**
+     * @OA\Get(
+     *     path="/api/cards/{collection}",
+     *     summary="Obtener todos los cromos de una colección",
+     *     description="Retorna una lista de todos los cromos de una colección.",
+     *     tags={"Colecciones"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(
+     *         name="collection",
+     *         in="path",
+     *         description="ID de la colección",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Listado de cromos obtenido con éxito",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="cards",
+     *                 type="array",
+     *                 @OA\Items(ref="#/components/schemas/Coleccion")
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Error interno del servidor"
+     *     )
+     * )
+     */
 
+    public function getSCardsCollection(Collection $collection): \Illuminate\Http\JsonResponse {
+        $cards = $collection->cards;
+        return response()->json(['cards' => $cards], 200);
+    }
 }
